--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="style.css">
  </head>
  <body>
- <h1 id="vitaliySchemelev">Vitaliy Schemelev</h1>
- <hr />
+ 	<h1 id="vitaliySchemelev">Vitaliy Schemelev</h1>
+<hr />
 <div>
 	<h3 id="contact-information">Contact information:</h3>
 
@@ -26,5 +26,10 @@
 	  <li>English - Pre-Intermediate (according to the online test at <a href="https://training.by/" target="_blank">www.training.by</a>)</li>
 	</ul>
 </div>
- </body>
+<footer>
+      <a class="github" href="https://github.com/To-n-y" target="_blanck">
+        <img class="github-icon" src="./icons/github.svg" alt="Github Icon" width="26" height="26">
+        <p class="visit">Visit my GitHub</p></a>
+</footer>
+</body>
 </html>
